--- a/index/templates/api.html
+++ b/index/templates/api.html
@@ -13,7 +13,7 @@
 </p>
 <p>
   Likewise, to return results in XML format, use the URL
-  <strike>https://dopepod.me/api/xml/</strike>. (Coming soon!)
+  <a href="https://dopepod.me/api/xml/">https://dopepod.me/api/xml/</a>.
 </p>
 <p>
   By default, results for the top 50 podcasts will be returned.
@@ -31,7 +31,7 @@
   </li>
   <li>
     "genre" will filter podcasts by genre. Example:
-    <a href="https://dopepod.me/api/json/?genre=Arts">https://dopepod.me/api/json/?genre=Arts</a>. For a full list of genres,
+    <a href="https://dopepod.me/api/xml/?genre=Arts">https://dopepod.me/api/xml/?genre=Arts</a>. For a full list of genres,
     <strike>click here</strike>. (Coming soon!)
   </li>
   <li>
@@ -41,7 +41,7 @@
   </li>
   <li>
     "order" will set the order for shown results. Choices: "rank" (default) for ordering based on popularity, or "name" for alphabetical ordering. Example:
-    <a href="https://dopepod.me/api/json/?order=name">https://dopepod.me/api/json/?order=name</a>.
+    <a href="https://dopepod.me/api/xml/?order=name">https://dopepod.me/api/xml/?order=name</a>.
   </li>
   <li>
     "show" will set the number of shown results in the range of 1-200. Default is 50. Example:
@@ -49,7 +49,7 @@
   </li>
 </ul>
 <p>
-  Note: all spaces must be replaced by a plus sign (+) and ampersands with the URL symbol "%26". Example: <a href="https://dopepod.me/api/json/?genre=Sports+%26+Recreation">https://dopepod.me/api/json/?genre=Sports+%26+Recreation</a>.
+  Note: all spaces must be replaced by a plus sign (+) and ampersands with the URL symbol "%26". Example: <a href="https://dopepod.me/api/xml/?genre=Sports+%26+Recreation">https://dopepod.me/api/xml/?genre=Sports+%26+Recreation</a>.
 </p>
 <p>
   Query parameters consist of a key/value pair concatenated with an equal sign (=), such as "q=something". Parameters may
@@ -63,7 +63,7 @@
 <p>
    To lookup data on a single podcast, you may use the query parameter "podid" in conjuction with the id of the podcast. Podcast
   id can be found either in the API search results (as "podid"), or on the URL of the podcast, such as
-  <a class="showpod-link" data-podid="730254722" href="/showpod/730254722/" title="Jalen &amp; Jacoby">https://dopepod.me/showpod/730254722/</a>, where the id is "730254722". So to use API lookup for the aforementioned podcast,
+  <a class="showpod-link" data-podid="730254722" href="/showpod/730254722/" title="Jalen & Jacoby">https://dopepod.me/showpod/730254722/</a>, where the id is "730254722". To use API lookup on the aforementioned podcast,
   you would use the URL
-  <strike>https://dopepod.me/api/json/?podid=730254722</strike>. (Coming soon!). Note: parameter "podid" will override all other parameters.
+  <a href="https://dopepod.me/api/xml/?podid=730254722">https://dopepod.me/api/xml/?podid=730254722</a>. Note: parameter "podid" will override all other parameters.
 </p>
