--- a/index/templates/api.html
+++ b/index/templates/api.html
@@ -44,7 +44,7 @@
     <a href="https://dopepod.me/api/xml/?order=name">https://dopepod.me/api/xml/?order=name</a>.
   </li>
   <li>
-    "show" will set the number of shown results in the range of 1-200. Default is 50. Example:
+    "show" will set the number of shown results between 1-200. Default is 50. Example:
   <a href="https://dopepod.me/api/json/?show=10">https://dopepod.me/api/json/?show=10</a>.
   </li>
 </ul>
