--- a/index/templates/api.html
+++ b/index/templates/api.html
@@ -2,7 +2,7 @@
   API
 </h3>
 <p>
-  dopepod employs a simple, easy-to-use API for searching and looking up podcasts.
+  dopepod employs a simple, easy-to-use API (Application Programming Interface) for searching and looking up podcasts.
 </p>
 <strong>
   Here's how it works:
