--- a/index/templates/base.html
+++ b/index/templates/base.html
@@ -42,48 +42,46 @@
   <link rel="stylesheet" href="{% static 'style.min.css' %}" />
 </head>
 <body class="{% if user.profile.theme %}{{ user.profile.theme }}{% else %}light{% endif %}">
-  <div class="container-fluid px-0">
-    <!-- DOPEBAR -->
-    <nav class="color-1-trans" id="dopebar">
-      {% include "dopebar.min.html" %}
-    </nav>
-    <!-- MAIN CONTENT -->
-    <div class="container" id="main-wrapper">
-      <button class="scroll-up d-none">
-        <i class="fas fa-angle-up fa-lg" title="Up"></i>
-      </button>
-      <div class="row">
-        <div class="col-12 order-3 col-lg-6 order-lg-2" id="left">
-          <!-- CHARTS -->
-          <div class="row" id="charts">
-            {% if charts %} {% with charts as results %} {% include "results_base.min.html" %} {% endwith %} {% endif %}
-          </div>
+  <!-- DOPEBAR -->
+  <nav id="dopemenu">
+    {% include "dopemenu.min.html" %}
+  </nav>
+  <!-- MAIN CONTENT -->
+  <div class="container" id="main-wrapper">
+    <button class="scroll-up d-none">
+      <i class="fas fa-angle-up fa-lg" title="Up"></i>
+    </button>
+    <div class="row">
+      <div class="col-12 order-3 col-lg-6 order-lg-2" id="left">
+        <!-- CHARTS -->
+        <div class="row" id="charts">
+          {% if charts %} {% with charts as results %} {% include "results_base.min.html" %} {% endwith %} {% endif %}
         </div>
-        <div class="col-12 order-1" id="main">
-          <!-- CENTER STAGE -->
-          <div class="row" id="center-stage">
-            {% block center-stage %} {% endblock %}
-          </div>
+      </div>
+      <div class="col-12 order-1" id="main">
+        <!-- CENTER STAGE -->
+        <div class="row" id="center-stage">
+          {% block center-stage %} {% endblock %}
         </div>
-        <div class="col-12 order-2 col-lg-6 order-lg-3" id="right">
-          <!-- LAST PLAYED -->
-          <div class="row" id="last-played">
-            {% if last_played %} {% with last_played as results %} {% include "results_base.min.html" %} {% endwith %} {% endif %}
-          </div>
+      </div>
+      <div class="col-12 order-2 col-lg-6 order-lg-3" id="right">
+        <!-- LAST PLAYED -->
+        <div class="row" id="last-played">
+          {% if last_played %} {% with last_played as results %} {% include "results_base.min.html" %} {% endwith %} {% endif %}
         </div>
       </div>
     </div>
-    <!-- PLAYER -->
-    <div class="container-fluid fixed-bottom" id="player">
-      {% include "player.min.html" %}
-    </div>
-    <!-- FOOTER -->
-    <footer class="footer color-1-trans" id="footer">
-      {% include "footer.min.html" %}
-    </footer>
-    <div class="loaders">
-      {% include "circle-loading.min.html" %} {% include "button-loading.min.html" %}
-    </div>
+  </div>
+  <!-- PLAYER -->
+  <div class="container-fluid fixed-bottom" id="player">
+    {% include "player.min.html" %}
+  </div>
+  <!-- FOOTER -->
+  <footer class="footer color-1-trans" id="footer">
+    {% include "footer.min.html" %}
+  </footer>
+  <div id="loaders">
+    {% include "circle-loading.min.html" %} {% include "button-loading.min.html" %}
   </div>
   <script src="//ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="{% static 'bs/bootstrap.min.js' %}"></script>
