--- a/index/templates/splashboard.html
+++ b/index/templates/splashboard.html
@@ -40,7 +40,7 @@
               <div class="form-row">
                 <div class="col-12 dope-form-group">
                   <label for="login-login">Email</label>
-                  <input class="dope-field" type="text" name="login" autofocus required id="login-login" value="{{ email }}" />
+                  <input class="dope-field" type="text" name="login" required id="login-login" value="{{ email }}" />
                 </div>
                 <div class="col-12 dope-form-group">
                   <label for="login-password">Password</label>
@@ -77,7 +77,7 @@
               <div class="form-row">
                 <div class="col-12 dope-form-group">
                   <label for="signup-email">Email</label>
-                  <input class="dope-field" type="email" name="email" size="30" required autofocus id="signup-email" />
+                  <input class="dope-field" type="email" name="email" size="30" required id="signup-email" />
                 </div>
                 <div class="col-12 dope-form-group">
                   <label for="signup-password1">Password</label>
@@ -118,7 +118,7 @@
                   <label for="forgot-email">Email</label>
                 </div>
                 <div class="col dope-form-group">
-                  <input class="dope-field" id="forgot-email" type="email" name="email" size="30" required autofocus />
+                  <input class="dope-field" id="forgot-email" type="email" name="email" size="30" required />
                 </div>
                 <div class="col-auto">
                   <button class="btn-dope active" type="submit">
@@ -152,7 +152,7 @@
               <div class="form-row">
                 <div class="col-12 dope-form-group">
                   <label for="login-login">Email</label>
-                  <input class="dope-field" type="text" name="login" autofocus required id="login-login" value="{{ email }}" />
+                  <input class="dope-field" type="text" name="login" required id="login-login" value="{{ email }}" />
                 </div>
                 <div class="col-12 dope-form-group">
                   <label for="login-password">Password</label>
@@ -189,7 +189,7 @@
               <div class="form-row">
                 <div class="col-12 dope-form-group">
                   <label for="signup-email">Email</label>
-                  <input class="dope-field" type="email" name="email" size="30" required autofocus id="signup-email" />
+                  <input class="dope-field" type="email" name="email" size="30" required id="signup-email" />
                 </div>
                 <div class="col-12 dope-form-group">
                   <label for="signup-password1">Password</label>
@@ -230,7 +230,7 @@
                   <label for="forgot-email">Email</label>
                 </div>
                 <div class="col dope-form-group">
-                  <input class="dope-field" id="forgot-email" type="email" name="email" size="30" required autofocus />
+                  <input class="dope-field" id="forgot-email" type="email" name="email" size="30" required />
                 </div>
                 <div class="col-auto">
                   <button class="btn-dope active" type="submit">
@@ -257,7 +257,7 @@
               <div class="form-row">
                 <div class="col-12 dope-form-group">
                   <label for="login-login">Email</label>
-                  <input class="dope-field" type="text" name="login" autofocus required id="login-login" value="{{ email }}" />
+                  <input class="dope-field" type="text" name="login" required id="login-login" value="{{ email }}" />
                 </div>
                 <div class="col-12 dope-form-group">
                   <label for="login-password">Password</label>
@@ -294,7 +294,7 @@
               <div class="form-row">
                 <div class="col-12 dope-form-group">
                   <label for="signup-email">Email</label>
-                  <input class="dope-field" type="email" name="email" size="30" autofocus required id="signup-email" />
+                  <input class="dope-field" type="email" name="email" size="30" required id="signup-email" />
                 </div>
                 <div class="col-12 dope-form-group">
                   <label for="signup-password1">Password</label>
@@ -335,7 +335,7 @@
                   <label for="forgot-email">Email</label>
                 </div>
                 <div class="col dope-form-group">
-                  <input class="dope-field" id="forgot-email" type="email" name="email" size="30" required autofocus />
+                  <input class="dope-field" id="forgot-email" type="email" name="email" size="30" required />
                 </div>
                 <div class="col-auto">
                   <button class="btn-dope active" type="submit">
@@ -369,7 +369,7 @@
               <div class="form-row">
                 <div class="col-12 dope-form-group">
                   <label for="login-login">Email</label>
-                  <input class="dope-field" type="text" name="login" autofocus required id="login-login" value="{{ email }}" />
+                  <input class="dope-field" type="text" name="login" required id="login-login" value="{{ email }}" />
                 </div>
                 <div class="col-12 dope-form-group">
                   <label for="login-password">Password</label>
@@ -406,7 +406,7 @@
               <div class="form-row">
                 <div class="col-12 dope-form-group">
                   <label for="signup-email">Email</label>
-                  <input class="dope-field" type="email" name="email" size="30" required autofocus id="signup-email" />
+                  <input class="dope-field" type="email" name="email" size="30" required id="signup-email" />
                 </div>
                 <div class="col-12 dope-form-group">
                   <label for="signup-password1">Password</label>
@@ -447,7 +447,7 @@
                   <label for="forgot-email">Email</label>
                 </div>
                 <div class="col dope-form-group">
-                  <input class="dope-field" id="forgot-email" type="email" name="email" size="30" required autofocus />
+                  <input class="dope-field" id="forgot-email" type="email" name="email" size="30" required />
                 </div>
                 <div class="col-auto">
                   <button class="btn-dope active" type="submit">
