--- a/index/templates/logo.html
+++ b/index/templates/logo.html
@@ -1,9 +1,23 @@
-<div class="logo">
-  <a class="btn-dope index-link active" href="/">d</a>
-  <a class="btn-dope index-link active" href="/">o</a>
-  <a class="btn-dope index-link active" href="/">p</a>
-  <a class="btn-dope index-link active" href="/">e</a>
-  <a class="btn-dope index-link active" href="/">p</a>
-  <a class="btn-dope index-link active" href="/">o</a>
-  <a class="btn-dope index-link active" href="/">d</a>
-</div>
+<ul class="dope-buttons">
+  <li>
+    <a class="btn-dope index-link active" href="/">d</a>
+  </li>
+  <li>
+    <a class="btn-dope index-link active" href="/">o</a>
+  </li>
+  <li>
+    <a class="btn-dope index-link active" href="/">p</a>
+  </li>
+  <li>
+    <a class="btn-dope index-link active" href="/">e</a>
+  </li>
+  <li>
+    <a class="btn-dope index-link active" href="/">p</a>
+  </li>
+  <li>
+    <a class="btn-dope index-link active" href="/">o</a>
+  </li>
+  <li>
+    <a class="btn-dope index-link active" href="/">d</a>
+  </li>
+</ul>
