--- a/podcasts/templates/results_buttons.html
+++ b/podcasts/templates/results_buttons.html
@@ -62,17 +62,6 @@
     A-Z
   </a>
   {% endif %} {% endif %} 
-  {% if results.provider == "dopepod" %}
-    <a class="btn-dope options-button active provider-button" href="{{ results.provider_url }}">
-      <span>dopepod</span>
-      <span class="d-none">itunes</span>
-    </a>
-  {% elif results.provider == "itunes" %}
-    <a class="btn-dope options-button active provider-button" href="{{ results.provider_url }}">
-      <span class="d-none">dopepod</span>
-      <span>itunes</span>
-    </a>
-  {% endif %}
   {% if results.genres %} {% if results.selected_genre %}
   <a class="btn-dope exp exp-icon active" data-toggle="collapse" href="#genre-collapse-{{ results.view }}" aria-expanded="false"
     aria-controls="genre-collapse">
@@ -91,7 +80,16 @@
   <a class="btn-dope exp exp-icon" data-toggle="collapse" href="#language-collapse-{{ results.view }}" aria-expanded="false" aria-controls="language-collapse">
     All Languages
   </a>
-  {% endif %} {% endif %} 
+  {% endif %} {% endif %}
+  {% if results.provider %}
+  <a class="btn-dope exp exp-icon active" data-toggle="collapse" href="#provider-collapse-{{ results.view }}" aria-expanded="false" aria-controls="provider-collapse">
+    {% if results.provider == "dopepod" %}
+      dopepod
+    {% elif results.provider == "itunes" %}
+      itunes
+    {% endif %}
+  </a>
+  {% endif %}
   {% if results.view == "subscriptions" %}
   <a class="btn-dope unsubscribe-button" href="{% url 'subscriptions' %}">
     Unsubscribe
