--- a/index/templates/splashboard.html
+++ b/index/templates/splashboard.html
@@ -1,40 +1,27 @@
 <div class="row">
-  <div class="col-12 order-2 col-lg-4 order-lg-1 dope-wrapper">
-    {% include "genre-carousel.min.html" %}
-  </div>
-  <div class="col-12 order-1 col-lg-4 order-lg-2 dope-wrapper">
-    {% if results.view == "splash" %}
-      <h1>
-        <strong>
-          Discover and listen to thousands of free podcasts on
-        </strong>
-      </h1>
-      {% include "logo.min.html" %}
-      {% if errors or message %}
-        <div class="errors">
-          {% include "errors.min.html" %}
-        </div>
-      {% endif %}
-      <div class="login-content">
+  {% if results.view == "splash" %}
+    <div class="col-12 order-1" id="splash">
+      <div class="dope-wrapper">
+        {% if errors or message %}
+          <div class="errors">
+            {% include "errors.min.html" %}
+          </div>
+        {% endif %}
         {% if view == "signup" %}
           <div class="collapse fade login-collapse" id="splash-collapse">
-            <p>
-              is a free, mobile-friendly podcast web app that
-              scours the internet for fresh episodes so you don't have to.
-            </p>
-            <form class="form-inline search-form d-inline-block" method="GET" action="{% url 'search' %}">
-              <label for="q" class="sr-only">Search for podcasts</label>
-              <input class="dope-field q" type="text" name="q" type="search" placeholder="Search for podcasts"
-              aria-label="Search for podcasts" maxlength="30" autocomplete="off" accept-charset="utf-8" />
-              <button class="search-button" type="submit">
-                <i class="fa fa-search icon" title="Search"></i>
-              </button>
-            </form>            
-            <p>
-              Sign up now to subscribe to all your favorite podcasts and to create a personal playlist.
-            </p>
+            <h1>
+              <strong>
+                Listen to thousands of free podcasts in {{ results.languages.count }} languages and {{ results.genres.count }} genres
+              </strong>
+            </h1>
+            {% include "logo.min.html" %} {% include "search-form.min.html" %}
           </div>
           <div class="collapse fade login-collapse" id="login-collapse">
+            <h1>
+              <strong>
+                Login
+              </strong>
+            </h1>
             <form class="login-form" method="POST" action="{% url 'login' %}">
               {% csrf_token %}
               <div class="form-row">
@@ -72,6 +59,11 @@
             </form>
           </div>
           <div class="collapse fade login-collapse show" id="signup-collapse">
+            <h1>
+              <strong>
+                Signup
+              </strong>
+            </h1>
             <form class="signup-form" method="POST" action="{% url 'signup' %}">
               {% csrf_token %}
               <div class="form-row">
@@ -93,21 +85,14 @@
                   <button type="submit" class="btn-dope active">Signup</button>
                 </div>
               </div>
-              <div class="form-row">
-                <div class="col-6 px-0">
-                  <a class="privacy-link" href="{% url 'privacy' %}">
-                    Privacy
-                  </a>
-                </div>
-                <div class="col-6 px-0">
-                  <a class="terms-link" href="{% url 'terms' %}">
-                    Terms
-                  </a>
-                </div>
-              </div>
             </form>
           </div>
           <div class="collapse fade login-collapse" id="password-collapse">
+            <h1>
+              <strong>
+                Reset password
+              </strong>
+            </h1>
             <p>
               Forgot your password? Enter your email address below, and we'll send you an email with a link allowing you to reset it.
             </p>
@@ -130,23 +115,19 @@
           </div>
         {% elif view == "login" %}
           <div class="collapse fade login-collapse" id="splash-collapse">
-            <p>
-              is a free, mobile-friendly podcast web app that
-              scours the internet for fresh episodes so you don't have to.
-            </p>
-            <p>
-              Sign up now to subscribe to all your favorite podcasts and to create a personal playlist.
-            </p>
-            <form class="form-inline search-form d-inline-block" method="GET" action="{% url 'search' %}">
-              <label for="q" class="sr-only">Search for podcasts</label>
-              <input class="dope-field q" type="text" name="q" type="search" placeholder="Search for podcasts"
-              aria-label="Search for podcasts" maxlength="30" autocomplete="off" accept-charset="utf-8" />
-              <button class="search-button" type="submit">
-                <i class="fa fa-search icon" title="Search"></i>
-              </button>
-            </form>
+            <h1>
+              <strong>
+                Listen to thousands of free podcasts in {{ results.languages.count }} languages and {{ results.genres.count }} genres
+              </strong>
+            </h1>
+            {% include "logo.min.html" %} {% include "search-form.min.html" %}
           </div>
           <div class="collapse fade login-collapse show" id="login-collapse">
+            <h1>
+              <strong>
+                Login
+              </strong>
+            </h1>
             <form class="login-form" method="POST" action="{% url 'login' %}">
               {% csrf_token %}
               <div class="form-row">
@@ -184,6 +165,11 @@
             </form>
           </div>
           <div class="collapse fade login-collapse" id="signup-collapse">
+            <h1>
+              <strong>
+                Signup
+              </strong>
+            </h1>
             <form class="signup-form" method="POST" action="{% url 'signup' %}">
               {% csrf_token %}
               <div class="form-row">
@@ -205,21 +191,14 @@
                   <button type="submit" class="btn-dope active">Signup</button>
                 </div>
               </div>
-              <div class="form-row">
-                <div class="col-6 px-0">
-                  <a class="privacy-link" href="{% url 'privacy' %}">
-                    Privacy
-                  </a>
-                </div>
-                <div class="col-6 px-0">
-                  <a class="terms-link" href="{% url 'terms' %}">
-                    Terms
-                  </a>
-                </div>
-              </div>
             </form>
           </div>
           <div class="collapse fade login-collapse" id="password-collapse">
+            <h1>
+              <strong>
+                Reset password
+              </strong>
+            </h1>
             <p>
               Forgot your password? Enter your email address below, and we'll send you an email with a link allowing you to reset it.
             </p>
@@ -242,16 +221,19 @@
           </div>
         {% elif view == "password" %}
           <div class="collapse fade login-collapse" id="splash-collapse">
-            <p>
-              is a free, mobile-friendly podcast web app that
-              scours the internet for fresh episodes so you don't have to.
-            </p>
-              {% include "search-form.min.html" %}
-            <p>
-              Sign up now to subscribe to all your favorite podcasts and to create a personal playlist.
-            </p>
+            <h1>
+              <strong>
+                Listen to thousands of free podcasts in {{ results.languages.count }} languages and {{ results.genres.count }} genres
+              </strong>
+            </h1>
+            {% include "logo.min.html" %} {% include "search-form.min.html" %}
           </div>
           <div class="collapse fade login-collapse" id="login-collapse">
+            <h1>
+              <strong>
+                Login
+              </strong>
+            </h1>
             <form class="login-form" method="POST" action="{% url 'login' %}">
               {% csrf_token %}
               <div class="form-row">
@@ -289,6 +271,11 @@
             </form>
           </div>
           <div class="collapse fade login-collapse" id="signup-collapse">
+            <h1>
+              <strong>
+                Signup
+              </strong>
+            </h1>
             <form class="signup-form" method="POST" action="{% url 'signup' %}">
               {% csrf_token %}
               <div class="form-row">
@@ -310,21 +297,14 @@
                   <button type="submit" class="btn-dope active">Signup</button>
                 </div>
               </div>
-              <div class="form-row">
-                <div class="col-6 px-0">
-                  <a class="privacy-link" href="{% url 'privacy' %}">
-                    Privacy
-                  </a>
-                </div>
-                <div class="col-6 px-0">
-                  <a class="terms-link" href="{% url 'terms' %}">
-                    Terms
-                  </a>
-                </div>                
-              </div>
             </form>
           </div>
           <div class="collapse fade login-collapse show" id="password-collapse">
+            <h1>
+              <strong>
+                Reset password
+              </strong>
+            </h1>
             <p>
               Forgot your password? Enter your email address below, and we'll send you an email with a link allowing you to reset it.
             </p>
@@ -347,23 +327,19 @@
           </div>
         {% else %}
           <div class="collapse fade login-collapse show" id="splash-collapse">
-            <p>
-              is a free, mobile-friendly podcast web app that
-              scours the internet for fresh episodes so you don't have to.
-            </p>
-            <form class="search-form" method="GET" action="{% url 'search' %}">
-              <label for="q" class="sr-only">Search for podcasts</label>
-              <input class="dope-field q" type="text" name="q" type="search" placeholder="Search for podcasts"
-              aria-label="Search for podcasts" maxlength="30" autocomplete="off" accept-charset="utf-8" />
-              <button class="search-button" type="submit">
-                <i class="fas fa-search" title="Search"></i>
-              </button>
-            </form>            
-            <p>
-              Sign up now to subscribe to all your favorite podcasts and to create a personal playlist.
-            </p>
+            <h1>
+              <strong>
+                Listen to thousands of free podcasts in {{ results.languages.count }} languages and {{ results.genres.count }} genres
+              </strong>
+            </h1>
+            {% include "logo.min.html" %} {% include "search-form.min.html" %}
           </div>
           <div class="collapse fade login-collapse" id="login-collapse">
+            <h1>
+              <strong>
+                Login
+              </strong>
+            </h1>
             <form class="login-form" method="POST" action="{% url 'login' %}">
               {% csrf_token %}
               <div class="form-row">
@@ -401,6 +377,11 @@
             </form>
           </div>
           <div class="collapse fade login-collapse" id="signup-collapse">
+            <h1>
+              <strong>
+                Signup
+              </strong>
+            </h1>
             <form class="signup-form" method="POST" action="{% url 'signup' %}">
               {% csrf_token %}
               <div class="form-row">
@@ -422,21 +403,14 @@
                   <button type="submit" class="btn-dope active">Signup</button>
                 </div>
               </div>
-              <div class="form-row">
-                <div class="col-6 px-0">
-                  <a class="privacy-link" href="{% url 'privacy' %}">
-                    Privacy
-                  </a>
-                </div>
-                <div class="col-6 px-0">
-                  <a class="terms-link" href="{% url 'terms' %}">
-                    Terms
-                  </a>
-                </div>                
-              </div>
             </form>
           </div>
           <div class="collapse fade login-collapse" id="password-collapse">
+            <h1>
+              <strong>
+                Reset password
+              </strong>
+            </h1>
             <p>
               Forgot your password? Enter your email address below, and we'll send you an email with a link allowing you to reset it.
             </p>
@@ -459,40 +433,87 @@
           </div>
         {% endif %}
       </div>
-      <div class="login-buttons">
-        {% if view == "signup" %}
-          <a class="btn-dope exp login-link" href="/?view=login" data-target="#login-collapse" data-toggle="collapse" aria-expanded="false"
-            aria-controls="login-collapse">
-            Login
-          </a>
-          <a class="btn-dope exp signup-link" href="/?view=signup" data-target="#signup-collapse" data-toggle="collapse" aria-expanded="true"
-            aria-controls="signup-collapse">
-            Signup
-          </a>
-        {% elif view == "login" %}
-          <a class="btn-dope exp login-link" href="/?view=login" data-target="#login-collapse" data-toggle="collapse" aria-expanded="true"
-            aria-controls="login-collapse">
-            Login
-          </a>
-          <a class="btn-dope exp signup-link" href="/?view=signup" data-target="#signup-collapse" data-toggle="collapse" aria-expanded="false"
-            aria-controls="signup-collapse">
-            Signup
-          </a>
-        {% else %}
-          <a class="btn-dope exp login-link" href="/?view=login" data-target="#login-collapse" data-toggle="collapse" aria-expanded="false"
-            aria-controls="login-collapse">
-            Login
-          </a>
-          <a class="btn-dope exp signup-link" href="/?view=signup" data-target="#signup-collapse" data-toggle="collapse" aria-expanded="false"
-            aria-controls="signup-collapse">
-            Signup
-          </a>
-        {% endif %}
-      </div>
-      <div class="login-buttons">
+    </div>
+    <div class="col-12 order-3 col-lg-4 order-lg-2">
+      <div class="dope-wrapper">
+        <p>Sign in with your social media account</p>
         {% include "social-login.min.html" %}
       </div>
-    {% elif results.view == "dashboard" %}
+    </div>
+    <div class="col-12 order-2 col-lg-4 order-lg-3">
+      <div class="dope-wrapper">
+        <p>
+          Sign up now to subscribe to all your favorite podcasts and to create a personal playlist.
+        </p>
+        <ul class="dope-buttons">
+          {% if view == "signup" %}
+            <li>
+              <a class="btn-dope exp login-link" href="/?view=login" data-target="#login-collapse" data-toggle="collapse" aria-expanded="false"
+                aria-controls="login-collapse">
+                Login
+              </a>
+            </li>
+            <li>
+              <a class="btn-dope exp signup-link" href="/?view=signup" data-target="#signup-collapse" data-toggle="collapse" aria-expanded="true"
+                aria-controls="signup-collapse">
+                Signup
+              </a>
+            </li>
+          {% elif view == "login" %}
+            <li>
+              <a class="btn-dope exp login-link" href="/?view=login" data-target="#login-collapse" data-toggle="collapse" aria-expanded="true"
+                aria-controls="login-collapse">
+                Login
+              </a>
+            </li>
+            <li>
+              <a class="btn-dope exp signup-link" href="/?view=signup" data-target="#signup-collapse" data-toggle="collapse" aria-expanded="false"
+                aria-controls="signup-collapse">
+                Signup
+              </a>
+            </li>
+          {% else %}
+          <li>
+            <a class="btn-dope exp login-link" href="/?view=login" data-target="#login-collapse" data-toggle="collapse" aria-expanded="false"
+              aria-controls="login-collapse">
+              Login
+            </a>
+          </li>
+          <li>
+            <a class="btn-dope exp signup-link" href="/?view=signup" data-target="#signup-collapse" data-toggle="collapse" aria-expanded="false"
+              aria-controls="signup-collapse">
+              Signup
+            </a>
+          </li>
+          {% endif %}
+        </ul>
+        <ul class="dope-buttons">
+          <li>
+            <a class="privacy-link" href="{% url 'privacy' %}">
+              Privacy
+            </a>
+          </li>
+          <li>
+            ●
+          </li>
+          <li>
+            <a class="terms-link" href="{% url 'terms' %}">
+              Terms
+            </a>
+          </li>
+        </ul>
+      </div>
+    </div>
+    <div class="col-12 order-4 col-lg-4">
+      <div class="dope-wrapper">
+        <p>Save to cookie</p>
+        <button class="btn-dope">
+          Do it!
+        </button>
+      </div>
+    </div>
+  {% elif results.view == "dashboard" %}
+    <div class="col-12 order-1" id="dash">
       {% if errors or message %}
         <div class="errors">
           {% include "errors.min.html" %}
@@ -518,10 +539,10 @@
           {{ results.playlist_count }}/20
         </p>
       </a>
-    {% endif %}
-  </div>
-  <div class="col-12 order-3 col-lg-4 dope-wrapper">
-    {% include "language-carousel.min.html" %}
+    </div>
+  {% endif %}
+  <div class="col-12 order-last" id="slick">
+    {% include "slick.min.html" %}
   </div>
 </div>
 {% if request.is_ajax %}
