tweaks to splash, slick, charts, last_played

--- a/index/templates/logo.html
+++ b/index/templates/logo.html
@@ -1,4 +1,4 @@
-<ul class="dope-buttons">
+<ul class="dope-buttons logo">
   <li>
     <a class="btn-dope index-link active" href="/">d</a>
   </li>
