--- a/index/static/style.css
+++ b/index/static/style.css
@@ -7,6 +7,7 @@ body {
 a {
   font-weight: 600;
   color: rgb(0, 191, 165);
+  outline: none;
 }
 a:hover {
   color: inherit;
@@ -104,10 +105,10 @@ html:not(.no-touch) .results-bar .exp[aria-expanded="true"]:not(:focus) {
 .exp-icon::after {
   font-family: "Font Awesome 5 Free";
   font-weight: 900;
-  content: "\f067";
+  content: " \f067";
 }
 .exp-icon[aria-expanded="true"]::after {
-  content: "\f068";
+  content: " \f068";
 }
 .dope-toggle {
   float: right;
@@ -166,7 +167,7 @@ html:not(.no-touch) .results-bar .exp[aria-expanded="true"]:not(:focus) {
 .dope-buttons {
   list-style: none;
   padding: 0;
-  margin-bottom: 20px;
+  margin: 0;
 }
 .dope-buttons li {
   display: inline-block;
@@ -176,7 +177,7 @@ html:not(.no-touch) .results-bar .exp[aria-expanded="true"]:not(:focus) {
   margin: auto;
   padding: 10px;
   text-align: center;
-  max-width: 400px;
+  max-width: 375px;
 }
 .dope-wrapper h1 {
   font-size: 2em;
@@ -197,6 +198,9 @@ html:not(.no-touch) .results-bar .exp[aria-expanded="true"]:not(:focus) {
   padding: 3px 10px;
   background: rgb(0, 191, 165);
   color: #fff;
+}
+.logo {
+  margin: 20px 0;
 }
 a.donut-wrapper {
   color: unset;
@@ -450,56 +454,49 @@ input[type=checkbox] {
   text-align: center;
 }
 #slick h1 {
-  font-size: 2em;
-  margin: 20px 0;
-}
-#slick h2 {
   font-size: 1.5em;
   margin: 20px 0;
 }
 #slick p {
   font-weight: 400;
 }
-#slick a {
-  color: unset;
+#slick ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
 }
-#slick a:hover,
-#slick a:focus {
-  outline: none;
+#slick ul li {
+  display: inline-block;
+  margin: 5px;
 }
-.slick {
-  padding: 20px 0;
-}
-.slick-slide {
-  outline: none;
-  margin: 0 10px;
-}
-.slick-item {
+.slick-header {
+  margin: 5px;
   padding: 30px 10px;
   display: block;
   border-radius: .25rem;
   background: rgb(0, 191, 165);
-  color: #fff;
+  color: rgb(46, 46, 46);
   transition: all .25s ease-in-out;
 }
-.no-touch .slick-item:hover {
+.no-touch .slick-header:hover {
+  color: #fff;
   box-shadow: rgba(0, 0, 0, .5) 0 0 5px;
   transition: all .25s ease-in-out;
 }
 .slick-prev,
 .slick-next {
   position: absolute;
-  top: 50%;
+  top: 25px;
   z-index: 2000;
   -webkit-transform: translate(0, -50%);
   -ms-transform: translate(0, -50%);
   transform: translate(0, -50%);
 }
 .slick-prev {
-  left: 20px;
+  left: 10px;
 }
 .slick-next {
-  right: 20px;
+  right: 10px;
 }
 
 /* SETTINGS */
@@ -703,11 +700,6 @@ input[type=checkbox] {
 }
 
 /* CHARTS */
-.charts-result a,
-.grid-result a {
-  color: unset;
-  font-weight: unset;
-}
 .charts-result,
 .last-played-result {
   outline: none;
@@ -721,6 +713,17 @@ input[type=checkbox] {
 .no-touch .last-played-result:hover,
 .last-played-result.expanded {
   background: rgba(0, 191, 165, .2);
+}
+.charts-buttons {
+  padding-top: 5px;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+}
+.charts-buttons > * {
+  margin-right: 5px;
+  margin-top: 5px;
 }
 .charts-result img {
   margin-left: 5px;
@@ -776,18 +779,16 @@ input[type=checkbox] {
 }
 
 /* LAST PLAYED */
-.last-played-result {
-  position: relative;
-}
 .last-played-buttons {
   padding-top: 5px;
   display: -ms-flexbox;
   display: flex;
   -ms-flex-wrap: wrap;
   flex-wrap: wrap;
+  justify-content: flex-end;
 }
 .last-played-buttons > * {
-  margin-right: 5px;
+  margin-left: 5px;
   margin-top: 5px;
 }
 .last-played-result img {
@@ -829,6 +830,10 @@ input[type=checkbox] {
 /* SEARCH RESULTS */
 .grid-results {
   padding: 10px 0 0 10px;
+}
+.grid-result a {
+  color: unset;
+  font-weight: unset;
 }
 .grid-result {
   padding: 0 10px 10px 0;
@@ -1156,11 +1161,7 @@ input[type=checkbox] {
 }
 
 /* MEDIA QUERIES */
-/* Extra small devices (phones, up to 480px) */
-@media screen and (max-width: 767px) {
-  body {
-    font-size: 12px;
-  }
+@media screen and (max-width: 575px) {
   #left,
   #main,
   #right {
@@ -1169,6 +1170,12 @@ input[type=checkbox] {
   .results {
     border: none;
     border-radius: unset;
+  }
+}
+/* Extra small devices (phones, up to 480px) */
+@media screen and (max-width: 767px) {
+  body {
+    font-size: 12px;
   }
   .episodes-table .order {
     width: 40px;
