--- a/index/templates/slick.html
+++ b/index/templates/slick.html
@@ -1,39 +1,68 @@
 {% with results.genres as genres %}
-  <h1>{{ genres.count }} genres</h1>
   <div class="slick">
     {% for genre in genres %}
       <div class="slick-slide">
-        <a class="slick-item browse-link" href="/search/?genre={{ genre.url_format }}&view=grid">
-          <h2>
+        <a class="slick-header browse-link" href="/search/?genre={{ genre.url_format }}&view=grid">
+          <h1>
             <strong>
-              {{ genre }}
+              {{ genre.selected_genre }}
             </strong>
-          </h2>
+          </h1>
           <p>
-            {{ genre.n_podcasts }} podcasts
+            {{ genre.selected_genre.n_podcasts }} podcast{{ genre.selected_genre.n_podcasts|pluralize }}
           </p>
         </a>
+        <ul>
+          {% for podcast in genre.podcasts %}
+            <li>
+              <a class="showpod-link" data-podid="{{ podcast.object.podid }}" href="{% url 'showpod' podid=podcast.object.podid %}" title="{{ podcast.object.title }}">
+                <img class="img-fluid" src="//{{ podcast.object.artworkUrl }}100x100bb.jpg" onerror="this.src='//dopepod.me/img/{{ podcast.object.artworkUrl }}100x100bb.jpg'"
+                  alt="{{ podcast.object.title }}" />
+              </a>
+            </li>
+          {% endfor %}
+        </ul>
       </div>
     {% endfor %}      
   </div>
 {% endwith%}
 
 {% with results.languages as languages %}
-  <h1>{{ languages.count }} languages</h1>
   <div class="slick">
     {% for language in languages %}
-    <div class="slick-slide">
-      <a class="slick-item browse-link" href="/search/?language={{ language.url_format }}&view=grid">
-        <h2>
-          <strong>
-            {{ language }}
-          </strong>
-        </h2>
-        <p>
-          {{ language.n_podcasts }} podcasts
-        </p>
-      </a>
-    </div>
+      <div class="slick-slide">
+        <a class="slick-header browse-link" href="/search/?language={{ language.url_format }}&view=grid">
+          <h1>
+            <strong>
+              {{ language.selected_language }}
+            </strong>
+          </h1>
+          <p>
+            {{ language.selected_language.n_podcasts }} podcast{{ language.selected_language.n_podcasts|pluralize }}
+          </p>
+        </a>
+        <ul>
+          {% for podcast in language.podcasts %}
+            <li>
+              <a class="showpod-link" data-podid="{{ podcast.object.podid }}" href="{% url 'showpod' podid=podcast.object.podid %}" title="{{ podcast.object.title }}">
+                <img class="img-fluid" src="//{{ podcast.object.artworkUrl }}100x100bb.jpg" onerror="this.src='//dopepod.me/img/{{ podcast.object.artworkUrl }}100x100bb.jpg'"
+                  alt="{{ podcast.object.title }}" />
+              </a>
+            </li>
+          {% endfor %}
+        </ul>
+      </div>
     {% endfor %}
   </div>
 {% endwith%}
+
+{% if request.is_ajax %}
+  <script>
+    $(".slick").slick({
+      autoplay: true,
+      adaptiveHeight: true,
+      prevArrow: "<button type='button' class='btn-dope slick-prev'><i class='fas fa-angle-left' title='Previous'></i></button>",
+      nextArrow: "<button type='button' class='btn-dope slick-next'><i class='fas fa-angle-right' title='Next'></i></button>",
+    });
+  </script>
+{% endif %}
