--- a/index/templates/api.html
+++ b/index/templates/api.html
@@ -26,18 +26,8 @@
 </p>
 <ul>
   <li>
-    "q", literally querystring, will filter podcasts by title/artist. Example:
+    "q", short for querystring, will filter podcasts by title/artist. Example:
     <a href="https://dopepod.me/api/json/?q=dope">https://dopepod.me/api/json/?q=dope</a>.
-  </li>
-  <li>
-    "genre" will filter podcasts by genre. Example:
-    <a href="https://dopepod.me/api/xml/?genre=Arts">https://dopepod.me/api/xml/?genre=Arts</a>. For a full list of genres,
-    <strike>click here</strike>. (Coming soon!)
-  </li>
-  <li>
-    "language" will filter podcasts by language. Example:
-    <a href="https://dopepod.me/api/json/?language=English">https://dopepod.me/api/json/?language=English</a>. For a full list of languages,
-    <strike>click here</strike>. (Coming soon!)
   </li>
   <li>
     "order" will set the order for shown results. Choices: "rank" (default) for ordering based on popularity, or "name" for alphabetical ordering. Example:
@@ -46,6 +36,39 @@
   <li>
     "show" will set the number of shown results between 1-200. Default is 50. Example:
   <a href="https://dopepod.me/api/json/?show=10">https://dopepod.me/api/json/?show=10</a>.
+  </li>
+  <li>
+    "genre" will filter podcasts by genre. Example:
+    <a href="https://dopepod.me/api/xml/?genre=Arts">https://dopepod.me/api/xml/?genre=Arts</a>. For a full list of genres,
+    <a class="exp-icon" data-toggle="collapse" href="#genre-collapse-{{ results.view }}" aria-expanded="false" aria-controls="genre-collapse">
+      click here
+    </a>
+    <ul class="collapse fade" id="genre-collapse-{{ results.view }}">
+      {% for genre in results.genres %}
+        <li>
+          <a href="https://dopepod.me/api/json/?genre={{ genre.url_format }}">
+            {{ genre }}
+          </a>
+        </li>
+      {% endfor %}
+    </ul>
+  </li>
+  <li>
+    "language" will filter podcasts by language. Example:
+    <a href="https://dopepod.me/api/json/?language=English">https://dopepod.me/api/json/?language=English</a>. For a full list of languages,
+    <a class="exp-icon" data-toggle="collapse" href="#language-collapse-{{ results.view }}" aria-expanded="false"
+      aria-controls="language-collapse">
+      click here
+    </a>
+    <ul class="collapse fade" id="language-collapse-{{ results.view }}">
+      {% for language in results.languages %}
+        <li>
+          <a href="https://dopepod.me/api/json/?language={{ language.url_format }}">
+            {{ language }}
+          </a>
+        </li>
+      {% endfor %}
+    </ul>
   </li>
 </ul>
 <p>
